fix(editor): Fix error message color in output panel for dark mode (no-changelog) (#8950)

--- a/packages/design-system/src/css/_tokens.dark.scss
+++ b/packages/design-system/src/css/_tokens.dark.scss
@@ -138,7 +138,7 @@
 	--color-ndv-droppable-parameter-background: var(--prim-color-primary-alpha-010);
 	--color-ndv-droppable-parameter-active-background: var(--prim-color-alt-a-alpha-015);
 	--color-ndv-back-font: var(--prim-gray-0);
-	--color-ndv-ouptut-error-font: var(--prim-color-alt-c-tint-150);
+	--color-ndv-output-error-message: var(--prim-color-alt-c-tint-150);
 
 	// Notice
 	--color-notice-warning-border: var(--prim-color-alt-b-tint-250);
